2008-02-25  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Remove the now unused socket class attribute.

2008-02-22  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/component/plugs/flashhttp/Makefile.am:
	* flumotion/component/plugs/flashhttp/flashhttp.py:
	* flumotion/component/plugs/flashhttp/flashhttp.xml:
	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Add a proper flumotion http consumer wizard plugin

2008-02-12  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/muxers/flv/flv.xml: Add
	a provided-format.

2008-02-08  Johan Dahlin  <johan@gnome.org>

	* configure.ac:
	* flumotion/component/Makefile.am:
	* flumotion/component/encoders/flv/flv.xml:
	* flumotion/component/plugs/Makefile.am:
	* flumotion/component/plugs/__init__.py:
	* flumotion/component/plugs/flashhttp/Makefile.am:
	* flumotion/component/plugs/flashhttp/__init__.py:
	* flumotion/component/plugs/flashhttp/flashhttp.py:
	* flumotion/component/plugs/flashhttp/flashhttp.xml:
	* flumotion/component/plugs/flashhttp/flashplayer.html.template:
	* flumotion/component/plugs/flashhttp/flashplayer_location.py.in:
	* flumotion/component/plugs/flashhttp/fluflashembed.js:
	Add a dependency of flumotion-flash-player.
	Disable flv video encoder in the wizard, only support vp6 for now.
	Add a flashhttp plug with a js/html/m3u and flash file served.
	Work in progress, is not quite working yet.

2008-01-30  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/flv/flv_wizard.py:
	* flumotion/component/encoders/flv/vp6_wizard.py:
	* flumotion/component/encoders/mp3/mp3_wizard.py:
	Update to new wizard API

2008-01-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/flv/Makefile.am:
	* flumotion/component/encoders/flv/flv-wizard.glade:
	* flumotion/component/encoders/flv/flv.xml:
	* flumotion/component/encoders/flv/flv_wizard.py:
	* flumotion/component/encoders/flv/vp6-wizard.glade: